<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        tools:context=".presentation.MainActivity">


        <TextView
            android:id="@+id/tv_get_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="55dp"
            android:hint="@string/hint_get_data"/>

        <Button
            android:id="@+id/bt_get_data"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_get_data"/>

        <EditText
            android:id="@+id/et_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/hint_first_name"/>

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_last_name"/>

        <Button
            android:id="@+id/bt_save_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_save_data"
            android:layout_marginTop="15dp"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible" />

    </LinearLayout>
</layout>